# WanderLand

Rust/basic_concepts/: Cargo.toml
Rust/hello_cargo/: Cargo.toml
Rust/hello_world/: main.rs
Rust/rust_references/: Cargo.toml
Rust/rust_slice/: Cargo.toml
hacking_llvm/baby_step/: a.out  foo.ast  foo.cpp  test_clang.cpp  test_diagno.cpp
hacking_llvm/clang_diagnositic/: Makefile  clang_diag.cpp
hacking_llvm/first_llvm_project/: Makefile  hello.cpp  mysource.c
hacking_llvm/front_end/: Makefile
hacking_llvm/hello_llvm/: hello.bc  hello.c  hello.native  hello.s  hello_gcc
hacking_llvm/small_language/: 3  a.out
hacking_llvm/tools_and_design/: main.bc  main.c  main.ll  sum  sum.bc  sum.linked.bc  sum.ll
shmlib_codegen/: reflib_autogen.py  struct_def.json  utils.py
tao_of_bash/: *eshell*  .#test.txt  test.txt
tao_of_bash/NumSort/: a.out  bitmap.h  fisher_yates.c  pysort.py  test_bitmap.c
tao_of_bash/clthero/: .clthero.swp  clthero
tao_of_bash/sshero/: .mem.txt.swp  mem.txt  shadowsocks.json  sslocal.service  ssupdhero
tao_of_cmake/Step1/: .CMakeLists.txt.swp  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  tutorial.cxx
tao_of_cmake/Step1/MathFunctions/: CMakeLists.txt  Makefile  MathFunctions.h  cmake_install.cmake  mysqrt.cxx
tao_of_cmake/Step1_build/: CMakeCache.txt  Makefile  Tutorial  TutorialConfig.h  cmake_install.cmake
tao_of_cmake/minic_work/: CMakeLists.txt
tao_of_cmake/minic_work/include/reflib/: reflib_a.h
tao_of_cmake/minic_work/lib/: CMakeLists.txt
tao_of_cmake/minic_work/lib/reflib/: .#CMakeLists.txt  reflib_a.cxx
tao_of_cmake/minic_work/src/app_generic/: test_a.cxx
tao_of_cpp/template_bi_tree/: .#bi_tree.cpp  bi_tree.cpp
tao_of_cpp/your_pearls/: a.out  float_and_time.c  struct_size.c  test_functional.cpp
tao_of_gdb/: a.out  test.c
tao_of_git/: githero
tao_of_latex/sample_presentation/: main.aux  main.nav  main.out  main.tex  main.toc
tao_of_linux/basic_process/: launch_vim  launch_vim.c  test.txt  test_exit  test_exit.c  test_fork  test_fork.c  test_wait  test_wait.c
tao_of_linux/file_io/: .#file_wandering.c  .file_io.c.swp  .file_wandering.c.swp  a.out  file_io.c  file_wandering.c  nosync_write.c  test_read.c  test_select.c
tao_of_linux/high_standard_io/: .#test_writev.c  a.out  bucc.txt  foobaryar.txt  mmap.txt  test_epoll  test_epoll.c  test_mmap.c  test_readv  test_readv.c  test_writev  test_writev.c  writev
tao_of_linux/standard_io/: a.out  data  diff_arch.c  diffarch_write  output  samearch_read  samearch_read.c  seektest  test.txt  test_binary_read_write.c  test_seek.c  test_stdio.c  thread_lock_file.c
tao_of_lisp/bisearch/: bisearch.lisp
tao_of_lisp/gcd/: gcd.lisp
tao_of_lisp/test-pattern/: test.lisp
tao_of_make/baby_flex/: Makefile  lexer.c  words_count  words_count.c
tao_of_make/baby_hello/: Makefile  foo.c  foo.h  hello.c
tao_of_postgre/: connect.py
tao_of_rust/rust_kanban/: Cargo.toml  test.xlsx
tao_of_rust/rust_kanban/conf/: rust_kanban.toml
tao_of_rust/rust_kanban/src/: load_config.rs  main.rs  proc_args.rs
(+146 files in other folders)
