[package]
name = "rust_kanban"
version = "0.1.0"
authors = ["hjiangsse <hjiang@sse.com.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
calamine = "0.16.2"
structopt = "0.3.20"
toml = "0.5"
serde = "1.0"
serde_derive = "1.0.117"
